Fix categories display on mobile view

--- a/client/src/layouts/Content/Content.css
+++ b/client/src/layouts/Content/Content.css
@@ -11,10 +11,7 @@ main {
 }
 
 .main-categories {
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
-    margin-bottom: 20px;
+    display: none;
 }
 
 .main-categories > div {
@@ -26,11 +23,21 @@ main {
 }
 
 .main-categories > div > a {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: bold;
     color: #167b88;
 }
 
 .main-categories > div:hover {
     border-bottom: 2px solid #167b88;
+}
+
+@media (min-width: 900px) {
+
+    .main-categories {
+        display: flex;
+        justify-content: center;
+        flex-wrap: nowrap;
+        margin-bottom: 20px;
+    }
 }
